docs/api/qiskit/0.19/qiskit.pulse.GaussianSquare.mdx
---
title: GaussianSquare
description: API reference for qiskit.pulse.GaussianSquare
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.GaussianSquare
---

# GaussianSquare

<Class id="qiskit.pulse.GaussianSquare" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/pulse/pulse_lib/parametric_pulses.py" signature="GaussianSquare(duration, amp, sigma, width, name=None)" modifiers="class">
  A square pulse with a Gaussian shaped risefall on either side:

$$
\begin{align}\begin{aligned}risefall = (duration - width) / 2\\0 <= x < risefall\\f(x) = amp * exp( -(1/2) * (x - risefall/2)^2 / sigma^2) )\\risefall <= x < risefall + width\\f(x) = amp\\risefall + width <= x < duration\\f(x) = amp * exp( -(1/2) * (x - (risefall + width)/2)^2 / sigma^2) )\end{aligned}\end{align} 
$$

  Initialize the gaussian square pulse.

  **Parameters**

  *   **duration** (`int`) – Pulse length in terms of the the sampling period dt.
  *   **amp** (`complex`) – The amplitude of the Gaussian and of the square pulse.
  *   **sigma** (`float`) – A measure of how wide or narrow the Gaussian risefall is; see the class docstring for more details.
  *   **width** (`float`) – The duration of the embedded square pulse.
  *   **name** (`Optional`\[`str`]) – Display name for this pulse envelope.

  ## Attributes

  <span id="gaussiansquare-amp" />

  ### amp

  <Attribute id="qiskit.pulse.GaussianSquare.amp" attributeTypeHint="complex">
    The Gaussian amplitude.

    **Return type**

    `complex`
  </Attribute>

  <span id="gaussiansquare-id" />

  ### id

  <Attribute id="qiskit.pulse.GaussianSquare.id" attributeTypeHint="int">
    Unique identifier for this pulse.

    **Return type**

    `int`
  </Attribute>

  <span id="gaussiansquare-parameters" />

  ### parameters

  <Attribute id="qiskit.pulse.GaussianSquare.parameters" attributeTypeHint="Dict[str, Any]">
    Return a dictionary containing the pulse’s parameters.

    **Return type**

    `Dict`\[`str`, `Any`]
  </Attribute>

  <span id="gaussiansquare-sigma" />

  ### sigma

  <Attribute id="qiskit.pulse.GaussianSquare.sigma" attributeTypeHint="float">
    The Gaussian standard deviation of the pulse width.

    **Return type**

    `float`
  </Attribute>

  <span id="gaussiansquare-width" />

  ### width

  <Attribute id="qiskit.pulse.GaussianSquare.width" attributeTypeHint="float">
    The width of the square portion of the pulse.

    **Return type**

    `float`
  </Attribute>

  ## Methods

  <span id="gaussiansquare-call" />

  ### \_\_call\_\_

  <Function id="qiskit.pulse.GaussianSquare.__call__" signature="GaussianSquare.__call__(channel)">
    Call self as a function.
  </Function>

  <span id="gaussiansquare-draw" />

  ### draw

  <Function id="qiskit.pulse.GaussianSquare.draw" signature="GaussianSquare.draw(dt=1, style=None, filename=None, interp_method=None, scale=1, interactive=False, scaling=None)">
    Plot the pulse.

    **Parameters**

    *   **dt** (`float`) – Time interval of samples.
    *   **style** (*Optional\[*[*PulseStyle*](qiskit.visualization.pulse.qcstyle#qiskit.visualization.pulse.qcstyle.PulseStyle "qiskit.visualization.pulse.qcstyle.PulseStyle")*]*) – A style sheet to configure plot appearance
    *   **filename** (`Optional`\[`str`]) – Name required to save pulse image
    *   **interp\_method** (`Optional`\[`Callable`]) – A function for interpolation
    *   **scale** (`float`) – Relative visual scaling of waveform amplitudes
    *   **interactive** (`bool`) – When set true show the circuit in a new window (this depends on the matplotlib backend being used supporting this)
    *   **scaling** (`Optional`\[`float`]) – Deprecated, see scale

    **Returns**

    A matplotlib figure object of the pulse envelope

    **Return type**

    matplotlib.figure
  </Function>

  <span id="gaussiansquare-get-sample-pulse" />

  ### get\_sample\_pulse

  <Function id="qiskit.pulse.GaussianSquare.get_sample_pulse" signature="GaussianSquare.get_sample_pulse()">
    Return a SamplePulse with samples filled according to the formula that the pulse represents and the parameter values it contains.

    **Return type**

    [`SamplePulse`](qiskit.pulse.pulse_lib.SamplePulse "qiskit.pulse.pulse_lib.sample_pulse.SamplePulse")
  </Function>

  <span id="gaussiansquare-validate-parameters" />

  ### validate\_parameters

  <Function id="qiskit.pulse.GaussianSquare.validate_parameters" signature="GaussianSquare.validate_parameters()">
    Validate parameters.

    **Raises**

    [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If the parameters passed are not valid.

    **Return type**

    `None`
  </Function>
</Class>

